# Memory-Profiler

./: .gitignore  CMakeLists.txt  README.md  build.sh
examples/: demo.cpp
src/GUI/core/: Charts.cpp  GUI.cpp  SocketServer.cpp  Views.cpp  main_gui.cpp
src/GUI/include/: Charts.hpp  GUI.hpp  SocketServer.hpp  Views.hpp
src/utils/: Configuration.cpp  Configuration.hpp  Logger.cpp  Logger.hpp  Timer.cpp  Timer.hpp
tests/UnitTests/: test_ProfilerAPI.cpp
